# RaTeX-FFI

./: Cargo.toml
.github/workflows/: build-ffi-windows.yml  build-ffi-windows2.yml  ci.yml  main3.yml  main4.yml  main5.yml  main6.yml  main7.yml  main8.yml  main9.yml
crates/ratex-ffi/: Cargo.toml  build.rs  ratex_ffi.def
crates/ratex-ffi/include/: ratex.h
crates/ratex-ffi/src/: lib.rs
crates/ratex-layout/src/: engine.rs
crates/ratex-layout/tests/: layout_vs_katex.rs
crates/ratex-parser/src/: macro_expander.rs
crates/ratex-render/: Cargo.toml
crates/ratex-render/src/: lib.rs  renderer.rs
crates/ratex-render/tests/: bench_render.rs
scripts/: verify_exports.py
