[package]
name = "ratex-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "C ABI FFI exports for RaTeX"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
ratex-types  = { workspace = true }
ratex-parser = { workspace = true }
ratex-layout = { workspace = true }
ratex-render = { path = "../ratex-render", features = ["embed-fonts"] }
ratex-svg    = { path = "../ratex-svg", features = ["embed-fonts"] }
serde_json = { workspace = true }

[features]
default = ["embed-fonts"]
embed-fonts = ["ratex-render/embed-fonts", "ratex-svg/embed-fonts"]

[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.21", default-features = false }
